--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
         </form>
     </main>
 </div>
-<script src="/assets/script.js"></script>
+<script src="/scripts/script.js?v=2"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 </body>
 </html>
