--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -14,7 +15,9 @@
         <form action="">
             <div class="mb-3">
                 <label for="username" class="form-label">Введите имя</label>
-                <input type="text" class="form-control" id="username" placeholder="Введите имя">
+                <form action="http://127.0.0.1:8080/auth">
+                    <input type="text" class="form-control" id="username" placeholder="Введите имя">
+                </form>
             </div>
             <div class="mb-3" id="messages" style="max-height: 200px; overflow-y:scroll;"></div>
             <div class="mb-3" id="div">
